--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "license": "MIT",
   "dependencies": {
     "express": "~3.2.6",
-    "minreq": "~0.2.3",
-    "inline": "0.0.1"
+    "request": "~2.21.0"
   }
 }
